--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,10 +7,7 @@
         "dev": "vite",
         "build": "tsc && vite build",
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-        "preview": "vite preview",
-        "tauri": "tauri",
-        "tauri:dev": "tauri dev",
-        "tauri:build": "tauri build"
+        "preview": "vite preview"
     },
     "dependencies": {
         "@radix-ui/react-alert-dialog": "^1.0.5",
@@ -28,7 +25,6 @@
         "@radix-ui/react-tooltip": "^1.0.7",
         "@tanstack/react-query": "^5.17.9",
         "@tanstack/react-table": "^8.11.6",
-        "@tauri-apps/api": "^2.9.1",
         "axios": "^1.6.5",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.0",
@@ -47,7 +43,6 @@
         "zustand": "^4.5.7"
     },
     "devDependencies": {
-        "@tauri-apps/cli": "^2.9.6",
         "@types/html2canvas": "^0.5.35",
         "@types/node": "^20.11.5",
         "@types/react": "^18.2.48",
