--- a/.gitignore
+++ b/.gitignore
@@ -8,10 +8,13 @@ __pycache__/
 *.py[cod]
 *$py.class
 
-# Environment
+# Environment - NEVER commit these
 .env
 .env.local
 .env.*.local
+.env.production
+.env.development
+*.env
 
 # Build
 dist/
@@ -24,15 +27,29 @@ out/
 .idea/
 .DS_Store
 Thumbs.db
+*.swp
+*.swo
 
 # Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.log
+*.log
+logs/
+backend/logs/
 
 # Database
 *.sqlite3
 *.db
+twse_filter.db
+
+# Testing
+.coverage
+htmlcov/
+.pytest_cache/
+coverage/
+
+# Misc
 frontend/src-tauri/binaries/python-backend-*
 !frontend/src-tauri/binaries/.gitkeep
+.dockerignore
