--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,39 +1,53 @@
 # Backend dependencies for TWSE Stock Filter
+# Generated: 2026-02-01
+# Python 3.9+
 
-# Web Framework
-fastapi>=0.109.0
-uvicorn[standard]>=0.27.0
+# ===== Web Framework =====
+fastapi==0.109.2
+uvicorn[standard]==0.27.1
 
-# Database
-sqlalchemy>=2.0.25
-greenlet>=3.0.0
-aiosqlite>=0.19.0
+# ===== Database =====
+sqlalchemy==2.0.25
+greenlet==3.0.3
+aiosqlite==0.19.0
 
-# Data Processing
-pandas>=2.0.0
-numpy>=1.24.0
+# ===== Data Processing =====
+pandas==2.2.0
+numpy==1.26.4
 
-# HTTP Client
-httpx>=0.26.0
-aiohttp>=3.9.0
+# ===== HTTP Client =====
+httpx==0.26.0
+aiohttp==3.9.3
 
-# Data Validation
-pydantic>=2.5.0
-pydantic-settings>=2.1.0
+# ===== Data Validation =====
+pydantic==2.6.1
+pydantic-settings==2.1.0
 
-# Excel Export
-openpyxl>=3.1.0
-xlsxwriter>=3.1.0
+# ===== Excel Export =====
+openpyxl==3.1.2
+xlsxwriter==3.1.9
 
-# Caching
-cachetools>=5.3.0
+# ===== Caching =====
+cachetools==5.3.2
 
-# Date/Time utilities
-python-dateutil>=2.8.0
+# ===== Date/Time utilities =====
+python-dateutil==2.8.2
 
-# Environment variables
-python-dotenv>=1.0.0
+# ===== Environment variables =====
+python-dotenv==1.0.1
 
-# CORS
-python-multipart>=0.0.6
+# ===== CORS =====
+python-multipart==0.0.6
+
+# ===== Logging =====
+python-json-logger==2.0.7
+
+# ===== Security (optional auth) =====
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+
+# ===== Testing =====
+pytest==8.0.0
+pytest-asyncio==0.23.4
+pytest-cov==4.1.0
 
