--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,41 +3,41 @@
 # Python 3.9+
 
 # ===== Web Framework =====
-fastapi==0.109.2
-uvicorn[standard]==0.27.1
+fastapi==0.115.6
+uvicorn[standard]==0.32.1
 
 # ===== Database =====
-sqlalchemy==2.0.25
-greenlet==3.0.3
-aiosqlite==0.19.0
+sqlalchemy==2.0.36
+greenlet==3.1.1
+aiosqlite==0.20.0
 
 # ===== Data Processing =====
-pandas==2.2.0
+pandas==2.2.3
 numpy==1.26.4
 
 # ===== HTTP Client =====
-httpx==0.26.0
-aiohttp==3.9.3
+httpx==0.28.1
+aiohttp==3.11.11
 
 # ===== Data Validation =====
-pydantic==2.6.1
-pydantic-settings==2.1.0
+pydantic==2.10.4
+pydantic-settings==2.7.0
 
 # ===== Excel Export =====
-openpyxl==3.1.2
-xlsxwriter==3.1.9
+openpyxl==3.1.5
+xlsxwriter==3.2.0
 
 # ===== Caching =====
-cachetools==5.3.2
+cachetools==5.5.0
 
 # ===== Date/Time utilities =====
-python-dateutil==2.8.2
+python-dateutil==2.9.0.post0
 
 # ===== Environment variables =====
 python-dotenv==1.0.1
 
 # ===== CORS =====
-python-multipart==0.0.6
+python-multipart==0.0.18
 
 # ===== Logging =====
 python-json-logger==2.0.7
@@ -47,7 +47,7 @@ python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 
 # ===== Testing =====
-pytest==8.0.0
-pytest-asyncio==0.23.4
-pytest-cov==4.1.0
+pytest==8.3.4
+pytest-asyncio==0.25.2
+pytest-cov==6.0.0
 
