--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,33 +1,36 @@
-version: '3.8'
-
 services:
   backend:
     build:
       context: ./backend
       dockerfile: Dockerfile
+    container_name: twse-backend
     ports:
       - "8000:8000"
     environment:
-      - DATABASE_URL=sqlite+aiosqlite:///./data/twse_filter.db
-      - CORS_ORIGINS=http://localhost:5173,http://localhost:3000,http://frontend:5173
+      - CORS_ORIGINS=http://localhost,http://localhost:80,http://localhost:5173
+      - DEBUG=false
     volumes:
-      - ./data:/app/data
-    restart: unless-stopped
+      - ./twse_filter.db:/app/twse_filter.db
+      - ./backend/logs:/app/logs
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      test: ["CMD", "python", "-c", "import httpx; httpx.get('http://localhost:8000/api/health')"]
       interval: 30s
       timeout: 10s
       retries: 3
+    restart: unless-stopped
 
   frontend:
     build:
       context: ./frontend
       dockerfile: Dockerfile
+    container_name: twse-frontend
     ports:
-      - "5173:80"
+      - "80:80"
     depends_on:
-      - backend
+      backend:
+        condition: service_healthy
     restart: unless-stopped
 
-volumes:
-  data:
+networks:
+  default:
+    name: twse-network
