--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,53 +10,53 @@
         "preview": "vite preview"
     },
     "dependencies": {
-        "@radix-ui/react-alert-dialog": "^1.0.5",
-        "@radix-ui/react-checkbox": "^1.0.4",
-        "@radix-ui/react-dialog": "^1.0.5",
-        "@radix-ui/react-dropdown-menu": "^2.0.6",
-        "@radix-ui/react-label": "^2.0.2",
-        "@radix-ui/react-popover": "^1.0.7",
-        "@radix-ui/react-select": "^2.0.0",
-        "@radix-ui/react-slider": "^1.1.2",
-        "@radix-ui/react-slot": "^1.0.2",
-        "@radix-ui/react-switch": "^1.0.3",
-        "@radix-ui/react-tabs": "^1.0.4",
-        "@radix-ui/react-toast": "^1.1.5",
-        "@radix-ui/react-tooltip": "^1.0.7",
-        "@tanstack/react-query": "^5.17.9",
-        "@tanstack/react-table": "^8.11.6",
-        "axios": "^1.6.5",
-        "class-variance-authority": "^0.7.0",
-        "clsx": "^2.1.0",
-        "date-fns": "^3.2.0",
+        "@radix-ui/react-alert-dialog": "^1.1.4",
+        "@radix-ui/react-checkbox": "^1.1.3",
+        "@radix-ui/react-dialog": "^1.1.4",
+        "@radix-ui/react-dropdown-menu": "^2.1.4",
+        "@radix-ui/react-label": "^2.1.1",
+        "@radix-ui/react-popover": "^1.1.4",
+        "@radix-ui/react-select": "^2.1.4",
+        "@radix-ui/react-slider": "^1.2.2",
+        "@radix-ui/react-slot": "^1.1.1",
+        "@radix-ui/react-switch": "^1.1.2",
+        "@radix-ui/react-tabs": "^1.1.2",
+        "@radix-ui/react-toast": "^1.2.4",
+        "@radix-ui/react-tooltip": "^1.1.6",
+        "@tanstack/react-query": "^5.62.8",
+        "@tanstack/react-table": "^8.20.6",
+        "axios": "^1.7.9",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "date-fns": "^4.1.0",
         "html2canvas": "^1.4.1",
-        "jspdf": "^4.0.0",
-        "lightweight-charts": "^4.1.0",
-        "lucide-react": "^0.309.0",
-        "react": "^18.2.0",
-        "react-day-picker": "^8.10.0",
-        "react-dom": "^18.2.0",
-        "react-router-dom": "^6.21.2",
-        "recharts": "^2.10.4",
-        "tailwind-merge": "^2.2.0",
+        "jspdf": "^2.5.2",
+        "lightweight-charts": "^4.2.1",
+        "lucide-react": "^0.469.0",
+        "react": "^18.3.1",
+        "react-day-picker": "^9.4.4",
+        "react-dom": "^18.3.1",
+        "react-router-dom": "^7.1.1",
+        "recharts": "^2.15.0",
+        "tailwind-merge": "^2.6.0",
         "tailwindcss-animate": "^1.0.7",
-        "zustand": "^4.5.7"
+        "zustand": "^5.0.2"
     },
     "devDependencies": {
-        "@types/html2canvas": "^0.5.35",
-        "@types/node": "^20.11.5",
-        "@types/react": "^18.2.48",
-        "@types/react-dom": "^18.2.18",
-        "@typescript-eslint/eslint-plugin": "^6.19.0",
-        "@typescript-eslint/parser": "^6.19.0",
-        "@vitejs/plugin-react": "^4.2.1",
-        "autoprefixer": "^10.4.17",
-        "eslint": "^8.56.0",
-        "eslint-plugin-react-hooks": "^4.6.0",
-        "eslint-plugin-react-refresh": "^0.4.5",
-        "postcss": "^8.4.33",
-        "tailwindcss": "^3.4.1",
-        "typescript": "^5.3.3",
-        "vite": "^5.0.12"
+        "@types/node": "^22.10.5",
+        "@types/react": "^18.3.18",
+        "@types/react-dom": "^18.3.5",
+        "@eslint/js": "^9.17.0",
+        "@vitejs/plugin-react": "^4.3.4",
+        "autoprefixer": "^10.4.20",
+        "eslint": "^9.17.0",
+        "eslint-plugin-react-hooks": "^5.1.0",
+        "eslint-plugin-react-refresh": "^0.4.16",
+        "globals": "^15.14.0",
+        "postcss": "^8.4.49",
+        "tailwindcss": "^3.4.17",
+        "typescript": "^5.7.2",
+        "typescript-eslint": "^8.19.0",
+        "vite": "^6.0.7"
     }
 }
