--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,7 +14,7 @@ aiosqlite==0.20.0
 # ===== Data Processing =====
 pandas==2.2.3
 numpy==1.26.4
-pandas_ta==0.3.14b0
+pandas_ta
 
 
 # ===== HTTP Client =====
