--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,6 +10,7 @@ uvicorn[standard]==0.32.1
 sqlalchemy==2.0.36
 greenlet==3.1.1
 aiosqlite==0.20.0
+asyncpg==0.30.0  # PostgreSQL async driver for production
 
 # ===== Data Processing =====
 pandas==2.2.3
