--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,6 +8,8 @@ uvicorn[standard]>=0.27.0
 sqlalchemy>=2.0.25
 greenlet>=3.0.0
 aiosqlite>=0.19.0
+asyncpg>=0.29.0
+redis>=5.0.0
 
 # Data Processing
 pandas>=2.0.0
