--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,13 +8,19 @@ services:
     ports:
       - "8000:8000"
     environment:
-      - DATABASE_URL=sqlite+aiosqlite:///./data/twse_filter.db
+      - DATABASE_URL=postgresql+asyncpg://meow:meow123@postgres:5432/meow_stock
+      - REDIS_URL=redis://redis:6379/0
       - CORS_ORIGINS=http://localhost:5173,http://localhost:3000,http://frontend:5173
     volumes:
       - ./data:/app/data
+    depends_on:
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_started
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:8000/api/health"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -29,5 +35,35 @@ services:
       - backend
     restart: unless-stopped
 
+  # ===== 新增基礎服務 =====
+
+  postgres:
+    image: postgres:16-alpine
+    environment:
+      POSTGRES_DB: meow_stock
+      POSTGRES_USER: meow
+      POSTGRES_PASSWORD: meow123
+    ports:
+      - "5432:5432"
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U meow -d meow_stock"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    restart: unless-stopped
+
+  redis:
+    image: redis:7-alpine
+    ports:
+      - "6379:6379"
+    volumes:
+      - redisdata:/data
+    restart: unless-stopped
+
 volumes:
   data:
+  pgdata:
+  redisdata:
+
