fix: resolve all audit findings  remove hardcoded creds, non-root Dockerfile, screener thread offload, formula hardening, background sync
- Critical: docker-compose.yml remove hardcoded DB password, use env vars
- Critical: comment out Postgres/Redis host port exposure
- High: screener CPU-bound ops wrapped in asyncio.to_thread
- High: startup sync_tickers moved to background task
- Medium: both Dockerfiles now use non-root user (appuser)
- Medium: formula_parser remove '.' operator, add length/token limits
- Updated .env.example with POSTGRES_* and ADMIN_TOKEN placeholders

--- a/.env.example
+++ b/.env.example
@@ -4,8 +4,13 @@
 # FinMind API Token (optional, increases request quota)
 FINMIND_API_TOKEN=
 
-# Database URL (default: SQLite)
+# Database URL (default: SQLite for local dev)
 DATABASE_URL=sqlite+aiosqlite:///./twse_filter.db
+
+# Docker Compose Postgres settings (used by docker-compose.yml)
+POSTGRES_DB=meow_stock
+POSTGRES_USER=meow
+POSTGRES_PASSWORD=CHANGE_ME_TO_A_SECURE_PASSWORD
 
 # Cache expiration (seconds)
 CACHE_EXPIRE_SECONDS=300
@@ -15,3 +20,6 @@ CORS_ORIGINS=http://localhost:5173,http://localhost:3000
 
 # Debug mode
 DEBUG=false
+
+# Admin token for cache/clear endpoint
+ADMIN_TOKEN=
