--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,8 @@
 FROM python:3.12-slim
 
+# 建立非 root 使用者
+RUN addgroup --system appgroup && adduser --system --ingroup appgroup appuser
+
 WORKDIR /app
 
 # Install dependencies
@@ -9,9 +12,10 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy source code
 COPY . .
 
-# Create data directory
-RUN mkdir -p /app/data
+# Create data directory with correct ownership
+RUN mkdir -p /app/data && chown -R appuser:appgroup /app
 
+USER appuser
 EXPOSE 8000
 
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
